--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -18,6 +18,8 @@
 		</div>
 		<button type="submit" class="w-full bg-gray-900 dark:bg-gray-600 text-white py-3 rounded mt-4 hover:bg-gray-700 dark:hover:bg-gray-500">Login</button>
 	</form>
+	{{if .EnableRegistration}}
 	<p class="mt-4 text-center text-gray-900 dark:text-gray-100">Don't have an account? <a href="/register" class="text-gray-900 dark:text-gray-100 hover:underline">Register</a></p>
+	{{end}}
 </div>
 {{end}}
